added pagination to get all posts